tests/snapshots/vscode__vscode_default_explain.snap
---
source: tests/vscode.rs
expression: "support::stderr_text(&output)"
---
terminal configuration does not indicate a Nerd Font
