tests/snapshots/vscode__vscode_default_json.snap
---
source: tests/vscode.rs
expression: "support::stdout_json_snapshot_with_extra_normalizations(&output,\n    APP_SUPPORT_NORMALIZATIONS)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/vscode-default/<APP_SUPPORT>/Code/User/settings.json",
  "detected": false,
  "font": "'Monaco', 'Menlo', monospace",
  "profile": null,
  "source": "terminal_config",
  "terminal": "vscode"
}
