tests/snapshots/vscode__vscode_nerd_font_editor_json.snap
---
source: tests/vscode.rs
expression: "support::stdout_json_snapshot_with_extra_normalizations(&output,\nAPP_SUPPORT_NORMALIZATIONS)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/vscode-nerd-font-editor/<APP_SUPPORT>/Code/User/settings.json",
  "detected": true,
  "font": "'JetBrainsMono Nerd Font', monospace",
  "profile": null,
  "source": "terminal_config",
  "terminal": "vscode"
}
