tests/snapshots/vscode__vscode_project_override_json.snap
---
source: tests/vscode.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/vscode-project-override/projects/my-project/.vscode/settings.json",
  "detected": true,
  "font": "'JetBrainsMono Nerd Font', monospace",
  "profile": null,
  "source": "terminal_config",
  "terminal": "vscode"
}
