tests/snapshots/vscode__vscode_project_override_subdirectory_json.snap
---
source: tests/vscode.rs
expression: "support::stdout_json_snapshot_with_extra_normalizations(&output,\n&[(&project_root_str, \"<PROJECT_CWD>\")])"
---
{
  "confidence": "certain",
  "config_path": "<PROJECT_CWD>/.vscode/settings.json",
  "detected": true,
  "font": "'JetBrainsMono Nerd Font', monospace",
  "profile": null,
  "source": "terminal_config",
  "terminal": "vscode"
}
