tests/snapshots/vscode__vscodium_nerd_font_editor_explain.snap
---
source: tests/vscode.rs
expression: "support::stderr_text(&output)"
---
terminal configuration indicates a Nerd Font is active
