tests/snapshots/vscode__vscodium_nerd_font_editor_json.snap
---
source: tests/vscode.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/vscodium-nerd-font-editor/Library/Application Support/VSCodium/User/settings.json",
  "detected": true,
  "font": "'JetBrainsMono Nerd Font', monospace",
  "profile": null,
  "source": "terminal_config",
  "terminal": "vscode"
}
